# dynamic_gazebo_models

./: CMakeLists.txt  README.md  package.xml
launch/: dynamic_models_test.launch  elevator_doors.launch  empty_world.launch
lib/: libdoor_plugin.dylib  libflip_door.dylib  libflip_door_plugin.dylib
media/meshes/: elevator.dae
models/: elev_slide_left.sdf  elev_slide_right.sdf  elevator.sdf  flip_door_left.sdf  flip_door_right.sdf  slide_left.sdf  slide_right.sdf
msg/: ControlGroup.msg
src/controllers/: control_group.cpp  control_group.h  door_srv_controller.cpp  dynamics_manager.cpp  keyboard_op.cpp
src/plugins/: auto_elev_door_plugin.cc  door_plugin.cc  elevator_plugin.cc  flip_door_plugin.cc
srv/: AddGroup.srv  DeleteGroup.srv  ListGroups.srv  OpenCloseDoors.srv  OpenCloseElevDoors.srv  SetElevProps.srv  SetVelDoors.srv  TargetFloorElev.srv  TargetFloorElevators.srv
worlds/: empty.world
