<?xml version="1.0"?>
<package>
  <name>dynamic_gazebo_models</name>
  <version>0.0.0</version>
  <description>The dynamic_models package</description>

  <maintainer email="mohit.appi@gmail.com">MohitSridhar</maintainer>
  <maintainer email="ltw_david@hotmail.com">MohitSridhar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/media/meshes/"/>
    <gazebo_ros plugin_path="${prefix}/lib/" />
  </export>

</package>